[package]
name = "brawl-api"
version = "0.1.0"
description = "A Rust implementation of the Brawl Stars API (https://developer.brawlstars.com/)."
authors = ["PgBiel <9021226+pgbiel@users.noreply.github.com>"]
repository = "https://github.com/PgBiel/rust-brawl-api"
documentation = "https://docs.rs/brawl-api"
keywords = ["brawl", "stars", "brawlstars", "api"]
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
url = "~2.1.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
async-trait = { version = "0.1.22", optional = true }
num-traits = "~0.2"
chrono = { version = "0.4", features = ["serde"], optional = true }

[features]
default = [
    "players", "clubs",
    "rankings", "brawlers",
    "async", "auto-hashtag",
    "chrono"
]

players = []
clubs = []
rankings = []
brawlers = []
async = [
    "async-trait"
]
auto-hashtag = []
